Fixed jumping of map on first click

--- a/Client/Css/BrutusNext.css
+++ b/Client/Css/BrutusNext.css
@@ -387,6 +387,7 @@
 
 .MapComponent
 {
+  display: block;
   width: 100%;
   height: 100%;
 }
